--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
